update the doctror schema and updated the mail interface
